# compressor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
compressor/: __init__.py  __main__.py  benchmark.py  bits.py  cli.py  huffman.py  integers.py  lz77.py  models.py  sdeflate.py
tests/: test_cli.py  test_roundtrip.py
